# Discord-Bot-YinXi

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  Dockerfile-api  Dockerfile-dev  README.md  docker-compose-dev.yml  docker-compose.yml  newbot2.bat  newbot2.py  pyproject.toml  requirements.txt  start_run_in_docker_pm2.sh  須知.txt
.github/workflows/: docker-base.yml
api_server/: AGENTS.md  logging.yaml  main.py  pyproject.toml  robots.txt  server.py  sitemap.xml
api_server/routers/: player.py
api_server/routers/api/: __init__.py  player.py
api_server/src/: __init__.py  _setup_log.py  config.py  redis_client.py  tasks.py  url.py  utils.py
api_server/src/player/: audio_urls.py  player.py
api_server/src/websocket/: player.py
api_server/src/websocket/dc/: player.py
api_server/static/index/: scroll-to-top.js  status.css  style.css
api_server/static/player/: script.js  style.css  ui.js  utils.js
api_server/templates/: index.html  player.html  status.html
api_server/templates/partials/: navbar.html
api_server/test/: en.srt  main.py  test_call_init.py  test_call_update_song.py  test_music.webm
api_server/test/static/: script.js  ui.js  utils.js
api_server/test/templates/: index.html
assests/: DONE.md  TODO.md
cmds/: AIChannel.py  AITwo.py  ai_channel_two.py  ai_three.py  apiCog.py  bot_info_help.py  bot_status.py  cambridge_channel.py  channel_history.py  cool.py  counting.py  error.py  events_recording.py  giveaway.py  hugging.py  join_leave_guild.py  keep.py  levels.py  load.py  main.py  pjsk.py  play4.py  qrcode.py  qrcode_generator.py  recording.py  skyblock_events.py  skyblock_item_tracker.py  skyblock_main.py  skyblock_mayor.py  sub_yt.py  suggest_report.py  testtemp.py  tic_tac_toe.py  total_stats.py  translator.py  twitter_notification.py  voice2.py  voice3.py  voice_gemini.py  voice_gemini.txt  (+3 more)
cmds/AIsTwo/: base_chat.py  info.py  tool_map.py  utils.py
cmds/cambridge/: buttons.py  config.py  search.py
cmds/music_bot/: play.py  想法.py
core/: classes.py  close_event.py  functions.py  mock_interaction.py  mongodb.py  playwright.py  priority_queue.py  sqlite.py  translator.py
docker/: Dockerfile  Dockerfile-api  Dockerfile-base  docker-compose.yml
mongodb-bot_stats-migration/: cogs.json  migrate_stats.py  restore_from_backup.py
pyd_func/: c_function.cp313-win_amd64.pyd
so_func/: c_function.pyx  setup.py
templates/: anonymous.html  index.html
useless/: cvoice.py  music.py  music_bot_example.py  ollama.py  openrouter.py  suggest_test.md  test.md  test.py  translator.py  voice.py  voice2.py  voice3.py  voice_gemini.py  voice_gemini.txt  zhipuai.py
vector_data/: add_or_get.py  write_datas.py
(+117 files in other folders)
