[project]
name = "api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "orjson>=3.11.5",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]
